# UnpackingAnalysis

analysis2/: Makefile  oldMakefile  outputData.root
analysis2/Analysis/: Mom.Range.txt  Scin_Mod_position.txt  event  recon  spillhist  v1_horizontal_from_center.txt
analysis2/Decorder/Unpacking_3.1/: CMakeLists.txt  README
analysis2/Decorder/Unpacking_3.1/examples/: B2_rootAnalysis.cpp  CMakeLists.txt  CMakeLists.txt.ba  CMakeLists.txt~  GTrigTagSearch.cpp  HG_LG_calib.cpp  Module_test_unpack.cpp  Module_test_unpack.cpp~  Module_test_unpack_diff_root.cpp  Spill_data_print.cpp  babyMINDTDMUnpack.cpp  babyMindCalibration.cpp  babyMindDataDump.cpp  babyMindUnpack.cpp  babyMindUnpack_superfgd.cpp  babyMind_Jparc_tests.cpp  new_analysis.cpp  t9rootFileanalysis.cpp  t9rootFileanalysis_v2.cpp  t9rootFileanalysis_v3.cpp  ufe_monitor.cpp
analysis2/Decorder/Unpacking_3.1/lib/: libBabyMINDUnpack.dylib
analysis2/Decorder/Unpacking_3.1/obso/: MDpartEventBMTDM.h  babyMINDTDMUnpack_v2.cpp  babyMINDTDMUnpack_v3.cpp
analysis2/Decorder/Unpacking_3.1/src/: CMakeLists.txt  MDargumentHandler.cpp  MDdataContainer.h  MDdataFile.cpp  MDdataFile.h  MDdataWordBM.cpp  MDdataWordBM.h  MDexception.cpp  MDfragmentBM.cpp  MDfragmentBM.h  MDpartEventBM.cpp  MDpartEventBM.h
analysis2/Decorder/Unpacking_3.2/: CMakeLists.txt  MDfragmentBM.cpp  MDpartEventBM.cpp
analysis2/Decorder/Unpacking_3.2/Eventdisp/: 1May_2_off_MCR0_T2K_beamline_trigger_beam60us_neutrinos_ON_all.root  B2-connection.map  BMdisp.h  Event.root  Iron_Mod_position.txt  analysis_tree.c  myanalysis.c
analysis2/Decorder/Unpacking_3.2/examples/: CMakeLists.txt  LG_vs_ToT_calib.cpp  babyMINDTDMUnpack.cpp  babyMINDTDMUnpack.cpp~  babyMindCalibration.cpp  babyMindDataDump.cpp  babyMindUnpack.cpp  t9rootFileanalysis.cpp  t9rootFileanalysis_v1.cpp
analysis2/Decorder/Unpacking_3.2/lib/: libBabyMINDUnpack.dylib
analysis2/Decorder/Unpacking_3.2/obso/: MDpartEventBMTDM.cpp  babyMINDTDMUnpack_binary.cpp
analysis2/Decorder/Unpacking_3.2/src/: MDargumentHandler.h  MDdataFile.cpp  MDdataWord.h  MDdataWordBM.cpp  MDdataWordBM.h  MDexception.h  MDfragmentBM.cpp  MDfragmentBM.h  MDpartEventBM.cpp  MDpartEventBM.h
analysis2/Event_stock/: Event_11_May_1.root  Event_14_May_2.root  Event_14_May_3.root  Event_28_May_1.root  Event_4_May_2.root  Event_4_May_3.root  Event_5_May_1.root  Event_6_May_1.root  Event_6_May_2.root  Event_6_May_3.root
analysis2/Recon/: Recon_11_Apr_5.root  Recon_14_May_2.root  Recon_14_May_4.root  Recon_15_May_3.root  Recon_16_Apr_1.root  Recon_16_May_6.root  Recon_24_May_3.root  Recon_25_May_3.root  Recon_26_May_3.root  Recon_26_May_5.root  Recon_4_May_1.root  Recon_4_May_2.root  Recon_4_May_3.root  Recon_4_May_4.root  Recon_5_May_1.root  Recon_5_May_2.root  Recon_5_May_3.root  Recon_5_May_4.root  Recon_6_May_1.root  Recon_6_May_2.root  Recon_6_May_3.root  Recon_6_May_4.root  Recon_6_May_6.root  Recon_7_Apr_1.root  Recon_7_May_1.root  Recon_7_May_4.root  Recon_8_Apr_1.root  Recon_9_May_2.root
analysis2/Spill/: Spill_790010_0.root  Spill_790011_0.root  Spill_790011_1.root  Spill_790011_10.root  Spill_790011_11.root  Spill_790011_12.root  Spill_790011_13.root  Spill_790011_14.root  Spill_790011_15.root  Spill_790011_16.root  Spill_790011_17.root  Spill_790011_18.root  Spill_790011_19.root  Spill_790011_2.root  Spill_790011_20.root  Spill_790011_21.root  Spill_790011_22.root  Spill_790011_23.root  Spill_790011_24.root  Spill_790011_3.root  Spill_790011_4.root  Spill_790011_5.root  Spill_790011_6.root  Spill_790011_7.root  Spill_790011_8.root  Spill_790011_9.root  Spill_790012_0.root  Spill_790013_0.root  Spill_790013_1.root  Spill_790013_10.root  Spill_790013_11.root  Spill_790013_12.root  Spill_790013_13.root  Spill_790013_2.root  Spill_790013_3.root  Spill_790013_4.root  Spill_790013_5.root  Spill_790013_6.root  Spill_790013_7.root  Spill_790013_8.root  (+1345 more)
analysis2/include/: BMdisp.h  Fit.h  function.h  recon.h
analysis2/shell/: Decode.sh  Recon.sh  directory.sh  unpacking.sh
analysis2/src/: decorder.c.ba  event.cc  recon.cc  spillhist.cc
